# lv_sim_eclipse_sdl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  lv_conf.h  lv_drv_conf.h  main.cpp
Anim/lang/: Lang.cpp  Lang.h
Anim/ui/: Base.cpp  Base.h  Components.cpp  Components.h  TutorialUI.cpp  TutorialUI.h  UI.cpp  UI.h  UIActionBox.cpp  UIActionBox.h  UIBoot.cpp  UIBoot.h  UIDate.cpp  UIDate.h  UIDebug.cpp  UIDebug.h  UIDoubleProgress.cpp  UIDoubleProgress.h  UIFluid.cpp  UIFluid.h  UIFluidAssist.cpp  UIFluidAssist.h  UILangSelect.cpp  UILangSelect.h  UILoading.cpp  UILoading.h  UINoService.cpp  UINoService.h  UIOffline.cpp  UIOffline.h  UIPlantStatus.cpp  UIPlantStatus.h  UIProgress.cpp  UIProgress.h  UIQrCode.cpp  UIQrCode.h  UISysInfo.cpp  UISysInfo.h  UITest.cpp  UITest.h  (+14 more)
UICustom/: UIProvTip.cpp  UIProvTip.h  UIReconnect.cpp  UIReconnect.h
assets/: Santa-Claus1.mqoi  Santa-Claus2.mqoi  Santa-Claus3.mqoi  all_saints_day.c.mqoi  anger.a.mqoi  anger.b.mqoi  anger.c.mqoi  battery_low.b.mqoi  chapped_lips.a.mqoi  chapped_lips.b.mqoi  chapped_lips.c.mqoi  charging.a.mqoi  charging.b.mqoi  charging.c.mqoi  cheek_red_smile.a.mqoi  cheek_red_smile.b.mqoi  cheek_red_smile.c.mqoi  choke_fertilizer.mqoi  choke_sip.mqoi  choke_star.mqoi  choke_water.mqoi  chuckle.a.mqoi  chuckle.b.mqoi  chuckle.c.mqoi  cold.a.mqoi  cold.b.mqoi  cold.c.mqoi  confused.a.mqoi  confused.c.mqoi  confused.c2.mqoi  confusion.b.mqoi  crack_up.a.mqoi  crack_up.b.mqoi  crack_up.c.mqoi  desire_petting.a.mqoi  desire_petting.b.mqoi  desire_petting.c.mqoi  drink.a.mqoi  drink.b.mqoi  drink.c.mqoi  (+113 more)
drivers/: QoiCodec.cpp  QoiCodec.h  common.cpp  common.h
font/: AddFontRT.cpp  AddFontRT.h
image/: TomatoFruit.c  TomatoLeaf.c  TomatoSum.c  TomatoTotal.c
text/: ba_120.c  ba_16.c  ba_30.c  ba_40.c  font_lib.txt  mi_demi_12.c  mi_demi_120.c  mi_demi_20.c  mi_demi_40.c
tool/: qrcodegen.cpp  qrcodegen.hpp  sys.cpp  sys.h
ui/: Base.cpp  Base.h  Components.cpp  Components.h  TutorialUI.cpp  TutorialUI.h  UIActionBox.cpp  UIActionBox.h  UIBase.cpp  UIBase.h  UIDate.cpp  UIDate.h  UIDoubleProgress.cpp  UIDoubleProgress.h  UIFluid.cpp  UIFluid.h  UIFluidAssist.cpp  UIFluidAssist.h  UILoading.cpp  UILoading.h  UIPlantStatus.cpp  UIPlantStatus.h  UIProgress.cpp  UIProgress.h  UIProvTip.cpp  UIProvTip.h  UIQrCode.cpp  UIQrCode.h  UISysInfo.cpp  UISysInfo.h  UITest.cpp  UITest.h  UITestAging.cpp  UITestAging.h  UITestError.h  UIText.cpp  UIText.h  UITime.cpp  UITime.h  UIWeather.cpp  (+3 more)
utils/: log.cpp  log.h
(+35 files in other folders)
