cmake_minimum_required(VERSION 3.10)
project(lvgl)
set(CMAKE_C_STANDARD 11)#C11
set(CMAKE_CXX_STANDARD 17)#C17
set(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

file(GLOB_RECURSE INCLUDES "./*.h"
        "lv_drivers/*.h"
        "lvgl/*.h"
        "lv_fs_if/*.h"
        "Anim/*.h"
        "lib/*.h"
        "utils/*.h"
        "drivers/*.h"
        "tool/*.h"
        "UICustom/*.h")

list(APPEND INCLUDES "lib/nlohmann/Njson.hpp" "tool/qrcodegen.hpp")

file(GLOB_RECURSE SOURCES
        "lv_drivers/*.c"
        "lvgl/*.c"
        "lv_fs_if/*.c"
        "Anim/*.cpp"
        "Anim/lang/embedded/*.c"
        "lib/*.c"
        "utils/*.cpp"
        "drivers/*.cpp"
        "image/*.c"
        "tool/*.cpp"
        "UICustom/*.cpp"
        )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
SET(CMAKE_CXX_FLAGS "-O3")

add_definitions(-DLV_SIM)

find_package(SDL2 REQUIRED SDL2)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(main main.cpp mouse_cursor_icon.c ${SOURCES} ${INCLUDES})
add_compile_definitions(LV_CONF_INCLUDE_SIMPLE)
target_link_libraries(main PRIVATE SDL2 )
add_custom_target (run COMMAND ${EXECUTABLE_OUTPUT_PATH}/main)
